fix: text overflow in API documentation

--- a/gravitee-apim-portal-webui-next/src/components/page/page-markdown/page-markdown.component.scss
+++ b/gravitee-apim-portal-webui-next/src/components/page/page-markdown/page-markdown.component.scss
@@ -28,3 +28,8 @@ table td {
   white-space: normal !important;
   word-break: break-all !important;
 }
+
+p {
+  word-break: break-word; /* Works in most browsers */
+  word-break: break-all; /* As a fallback */
+}
